# g

./: .gitignore  .tmuxp.yaml  AGENTS.md  CHANGES  LICENSE  Makefile  README.md  conftest.py  cookiecutter.json  justfile  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  publish-docs.yml  tests.yml
docs/: AGENTS.md  Makefile  api.md  conf.py  developing.md  index.md  justfile  manifest.json  quickstart.md
docs/_ext/: __init__.py  argparse_exemplar.py
docs/_ext/sphinx_argparse_neo/: directive.py  nodes.py  renderer.py
docs/_static/css/: custom.css
docs/cli/: index.md
docs/project/: code-style.md  contributing.md  index.md  releasing.md
g/: __about__.py  __init__.py
hooks/: post_gen_project.py
src/g/: __about__.py  __init__.py
tests/: README.md  test_cli.py  test_cookiecutter.py
tests/docs/: __init__.py
tests/docs/_ext/: __init__.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __about__.py  __init__.py
